# Mitoflow

./: CHANGELOG.md  README.md
mitoflow/: .gitignore  AI_PROJECT_DESCRIPTION.md  CLAUDE.md  CODEBUDDY.md  LICENSE  README.md  README_CN.md  REVIEW.md  pyproject.toml
mitoflow/.mitoflow_ai_sessions/: _sessions.json
mitoflow/.mitoflow_ai_sessions/4551ffe7-8142-4841-84e0-a5e4e161d772/: events.jsonl  messages.jsonl
mitoflow/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
mitoflow/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
mitoflow/.planning/phases/01-foundation-quick-wins/: 01-02-SUMMARY.md  01-PLAN.md  01-REVIEW.md  01-SUMMARY.md  01-VERIFICATION.md  01-foundation-quick-wins-03-SUMMARY.md  02-PLAN.md  03-PLAN.md
mitoflow/.planning/phases/02-a-error-reduction/: 02-PLAN.md
mitoflow/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
mitoflow/data/gold_standard/: corrections.csv  species_list.csv
mitoflow/data/rna_seq/: download.pid
mitoflow/deploy/docker/: Dockerfile.web  docker-compose.yml
mitoflow/docs/: DEPLOYMENT_DESIGN.md  PROJECT_UPDATES_REVIEW.md
mitoflow/docs/validation/: gold_standard_species.md  metrics_definition.md  validation_script_design.md
mitoflow/examples/: Arabidopsis_mitochondria.gbk  ogdrawr_usage.py
mitoflow/results/rna_validation/: validation_report.json  validation_report.md
mitoflow/results/round1/: analysis_report.md  validation_details.json  validation_report.md  validation_summary.csv
mitoflow/results/round2/: gene_level_comparison.json  multi_tool_comparison.md  tool_comparison_summary.csv  validation_details.json  validation_report.md  validation_summary.csv
mitoflow/results/round2_circular_baseline/: validation_details.json  validation_report.md  validation_summary.csv
mitoflow/scripts/: align_rna_to_mito.py  apply_trans_splicing_fix.py  compare_multi_tools.py  download_genbank_batch.py  download_rna_reads.py  fix_duplicate_genes.py  prepare_mitoflow_input.py  run_cms_benchmark.py  run_gold_standard_batch.sh  test_phase4_fix.py  test_trans_splicing_fix.py  update_protein_database.py  validate_against_gold_standard.py  validate_boundaries_with_rna.py  validate_cms_ml.py
mitoflow/src/mitoflow/: __init__.py  cli.py
mitoflow/tests/: conftest.py  test_ai_cli.py  test_ai_knowledge.py  test_ai_mcp.py  test_ai_models.py  test_ai_providers.py  test_ai_runtime.py  test_ai_service.py  test_ai_sessions.py  test_ai_skills.py  test_ai_tools.py  test_ai_wiki.py  test_boundary_circular.py  test_boundary_refinement.py  test_circular_coords.py  test_cms_benchmark.py  test_cms_features.py  test_cms_ml.py  test_cms_predictor.py  test_gene_length_validation.py  test_input.py  test_trans_splicing.py  test_trans_splicing_merge.py  test_trna_naming.py  test_web_ai_routes.py
(+408 files in other folders)
