[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitoflow"
version = "0.1.0"
description = "One command, one paper — plant mitochondrial genome annotation & analysis platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MitoFlow Team" }]
keywords = ["bioinformatics", "mitochondria", "plant", "genome", "annotation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.79",
    "pyhmmer>=0.7",
    "typer>=0.7",
    "rich>=12",
    "pandas>=1.5",
    "pydantic>=2.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "jinja2>=3.0",
    "pycirclize>=0.3",
    "pygenomeviz>=0.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
rna = ["pysam>=0.22"]
viz-gbdraw = ["gbdraw>=0.9.0", "cairosvg"]
viz-ogdraw = []  # OGDrawR R package — install via R: remotes::install_github('xibeichingchen/OGDrawR')
yaml = ["pyyaml"]  # Optional: custom color scheme persistence
cms-ml = ["scikit-learn>=1.3", "joblib"]
cms-plm = ["transformers>=4.30", "torch>=2.0"]
cms-full = ["scikit-learn>=1.3", "joblib", "transformers>=4.30", "torch>=2.0", "lightgbm>=4.0"]

[project.scripts]
mitoflow = "mitoflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mitoflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
